<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendActivity">

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/etName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvName"
        app:layout_constraintEnd_toStartOf="@+id/glend"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Hola"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/etSurname"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvdni"
        app:layout_constraintEnd_toStartOf="@+id/glend"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <EditText
        android:id="@+id/etDni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/etDNI"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvSurname"
        app:layout_constraintEnd_toStartOf="@+id/glend"
        app:layout_constraintStart_toStartOf="@id/barrier" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="68dp"
        android:text="@string/tvName"
        android:fontFamily="@font/halloween_font"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tvSurname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="136dp"
        android:text="@string/tvSurname"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="370dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="29dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="25dp" />

    <TextView
        android:id="@+id/tvdni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="200dp"
        android:text="@string/tvdni"
        app:layout_constraintStart_toStartOf="@+id/glLeft"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="end"
        app:constraint_referenced_ids="tvName,tvSurname,tvdni" />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="276dp"
        android:layout_height="290dp"
        android:layout_marginTop="40dp"
        android:background="@color/material_dynamic_neutral_variant80"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/etMessage"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSurname" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMensaje"
        app:layout_constraintVertical_bias="0.674" />

</androidx.constraintlayout.widget.ConstraintLayout>